SERVER-57289 redact should not convert BSONArray into BSONObj

(cherry picked from commit 3b8806bef0f65df11e4d49786bf962ce0dd6b4dd)